--- a/HalloAppClip/fr.lproj/Localizable.strings
+++ b/HalloAppClip/fr.lproj/Localizable.strings
@@ -64,11 +64,29 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Partager";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Arrêter";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Mettre à jour";
 
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Pour activer l'enregistrement audio, appuie sur « Paramètres », puis allume le microphone";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Impossible d'accéder au microphone";
+
 /* Title for generic delete button. */
 "Delete" = "Supprimer";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.all" = "Partager avec tous mes contacts";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.except" = "Partager avec mes contacts, sauf les personnes que je sélectionne";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.only" = "Partager seulement avec les contacts sélectionnés";
 
 /* Title for exit button that closes the app */
 "home.update.notice.button.exit" = "Quitter";
@@ -93,6 +111,9 @@
 
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Moi";
+
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Abandonner";
 
 /* Disclaimer text about receiving SMS verification code */
 "registration.code.disclaimer" = "Tu recevras un code de vérification.\nLes tarifs des opérateurs peuvent s'appliquer.";
@@ -165,6 +186,9 @@
 
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Rejoignez mon réseau de relations réelles sur HalloApp. Téléchargez-le gratuitement sur le site halloapp.com/dl";
+
+/* Row in Settings screen */
+"title.privacy" = "Confidentialité";
 
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Contact inconnu";
