--- a/Halloapp/cs.lproj/InfoPlist.strings
+++ b/Halloapp/cs.lproj/InfoPlist.strings
@@ -8,7 +8,7 @@
 "NSContactsUsageDescription" = "Nahraj své kontakty na servery HalloApp, abys viděl(a) příspěvky svých přátel a umožnil(a) jim vidět ty tvoje.";
 
 /* Privacy - Microphone Usage Description */
-"NSMicrophoneUsageDescription" = "Toto ti umožní nahrávat videa se zvukem.";
+"NSMicrophoneUsageDescription" = "Můžete tak volat, posílat zvukové příspěvky a zprávy a nahrávat videa se zvukem.";
 
 /* Privacy - Photo Library Usage Description */
 "NSPhotoLibraryUsageDescription" = "Toto ti umožní sdílet fotky a videa z tvé knihovny a uložit ty, které pořídíš.";
