--- a/Halloapp/fr.lproj/InfoPlist.strings
+++ b/Halloapp/fr.lproj/InfoPlist.strings
@@ -8,7 +8,7 @@
 "NSContactsUsageDescription" = "Téléchargez vos contacts sur les serveurs de HalloApp pour voir les publications de vos amis et leur permettre de voir les vôtres.";
 
 /* Privacy - Microphone Usage Description */
-"NSMicrophoneUsageDescription" = "Ainsi, vous pouvez enregistrer des vidéos avec du son.";
+"NSMicrophoneUsageDescription" = "Cela te permet de passer des appels, d'envoyer des messages et des publications audio, ainsi que d'enregistrer des vidéos avec du son.";
 
 /* Privacy - Photo Library Usage Description */
 "NSPhotoLibraryUsageDescription" = "Vous pouvez ainsi partager des photos et des vidéos de votre bibliothèque et enregistrer celles que vous avez capturées.";
