--- a/Halloapp/pl.lproj/Localizable.strings
+++ b/Halloapp/pl.lproj/Localizable.strings
@@ -124,8 +124,47 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Udostępnij";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Stop";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Aktualizuj";
+
+/* Label for button that opens chat during call */
+"call.button.chat" = "czat";
+
+/* Label for button that ends call */
+"call.button.end" = "zakończ połączenie";
+
+/* Label for button that toggles mute status during call */
+"call.button.mute" = "wycisz";
+
+/* Label for button that toggles speakerphone status during call */
+"call.button.speaker" = "głośnik";
+
+/* Title for call history event. Appears next to details of a successful call. */
+"call.history.voice.call" = "Połączenie głosowe";
+
+/* Title for call history event. Appears next to details of a missed call. */
+"call.history.voice.call.missed" = "Nieodebrane połączenie głosowe";
+
+/* Status displayed when outgoing call starts */
+"call.status.calling" = "wywoływanie...";
+
+/* Status displayed while call is connecting */
+"call.status.connecting" = "łączenie...";
+
+/* Status displayed when call fails. */
+"call.status.failed" = "niepowodzenie";
+
+/* Status displayed when incoming call starts */
+"call.status.incoming" = "połączenie przychodzące";
+
+/* Status displayed when reconnecting during call */
+"call.status.reconnecting" = "ponowne łączenie...";
+
+/* Status displayed while outgoing call is ringing */
+"call.status.ringing" = "dzwonienie...";
 
 /* Generic error when trying to use camera */
 "camera.error" = "Błąd kamery";
@@ -157,6 +196,9 @@
 /* Title for a popup alerting about camera initialization error. */
 "camera.init.error.title" = "Błąd uruchamiania";
 
+/* No comment provided by engineer. */
+"Cancel" = "Anuluj";
+
 /* Text shown at the top of the chat screen informing the user that the contact is blocked */
 "chat.blocked.contact.label" = "Kontakt jest zablokowany, kliknij, aby go odblokować";
 
@@ -165,6 +207,9 @@
 
 /* Text shown at the top of the chat screen informing the user that the chat is end-to-end encrypted */
 "chat.encryption.label" = "Czaty są szyfrowane metodą end-to-end (od końca do końca), a HalloApp nie ma do nich dostępu. Naciśnij, aby dowiedzieć się więcej.";
+
+/* Text shown in Chat when the security keys of the contact user is chatting with, have changed */
+"chat.event.security.keys.changed" = "Zmieniły się klucze zabezpieczeń dla %@";
 
 /* Message text shown with the user who joined the group via invite link */
 "chat.group.event.join" = "Użytkownik %@ dołączył do grupy poprzez link zaproszenia do grupy";
@@ -307,6 +352,36 @@
 /* Warning text displayed in Comments when post wasn't available. */
 "comments.post.loading.failed" = "Wystąpił błąd podczas próby załadowania tego wpisu. Prosimy spróbować ponownie później.";
 
+/* Accessibility label for add images button */
+"composer.audio.a11y.addImages" = "Dodaj obrazy";
+
+/* Accessibility label for sharing a post */
+"composer.audio.a11y.shareRecording" = "Udostępnij";
+
+/* Accessibility label for starting an audio recording */
+"composer.audio.a11y.startRecording" = "Rozpocznij nagrywanie";
+
+/* Accessibility label for stopping an audio recording */
+"composer.audio.a11y.stopRecording" = "Zatrzymaj nagrywanie";
+
+/* Instructions for audio post composer */
+"composer.audio.instructions" = "Stuknij, aby nagrać";
+
+/* Title for audio post composer */
+"composer.audio.title" = "Nowy post audio";
+
+/* Title warning that a voice recording will be deleted */
+"composer.delete.recording.title" = "Usunąć nagranie głosowe?";
+
+/* Show the user that the title is tappable */
+"composer.deletevoicenote.message" = "Nagranie głosowe nie zostanie zapisanie, jeśli odrzucisz ten post.";
+
+/* Title for alert when closing the post composer with a voice note */
+"composer.deletevoicenote.title" = "Odrzucić post?";
+
+/* Label shown when only single media item selected */
+"composer.label.more" = "Dodaj więcej";
+
 /* Alert message in composer when a video is too long */
 "composer.max.video.length.message" = "Prosimy wybrać inny film lub nacisnąć przycisk edycji.";
 
@@ -336,6 +411,9 @@
 
 /* Feed Privacy indicator in post composer. */
 "composer.privacy.value.n.selected" = "composer.privacy.value.n.selected";
+
+/* Show the user that the title is tappable */
+"composer.subtitle.cta" = "Stuknij, aby zmienić";
 
 /* No comment provided by engineer. */
 "CONNECTION" = "POŁĄCZENIE";
@@ -380,10 +458,19 @@
 "fab.accessibility.camera" = "Kamera";
 
 /* VoiceOver label for photo button in floating compose post menu in Home view. */
-"fab.accessibility.photo.library" = "Biblioteka zdjęć";
+"fab.accessibility.photo.library" = "Galeria";
 
 /* VoiceOver label for text post button in floating compose post menu in Home view. */
 "fab.accessibility.text" = "Tekst";
+
+/* VoiceOver label for audio post button in floating compose post menu in Home view. */
+"fab.accessibility.voice" = "Audio";
+
+/* Label for floating compose post menu on Group screen. */
+"fab.post.button" = "Post";
+
+/* Text shown in place of a received post we are not able to decrypt yet. */
+"feed.comment.waiting" = "Oczekiwanie na komentarz. Może to trochę potrwać.";
 
 /* Shown while content is being retracted from feed */
 "feed.deleting" = "Usuwanie...";
@@ -439,29 +526,44 @@
 /* Shown when receiving a new (unsupported) type of post. */
 "feed.post.unsupported" = "Twoja wersja HalloApp nie obsługuje tego typu wpisów.";
 
+/* Text shown in place of a received post we are not able to decrypt yet. */
+"feed.post.waiting" = "Oczekiwanie na post. Może to trochę potrwać.";
+
 /* Shown while content is being posted to feed */
 "feed.posting" = "Publikowanie...";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
-"feed.privacy.descr.all" = "Udostępniaj wszystkim swoim kontaktom";
+"feed.privacy.descr.all" = "Udostępniaj wszystkim moim kontaktom";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
-"feed.privacy.descr.except" = "Udostępniaj swoim kontaktom z wyjątkiem wybranych osób";
+"feed.privacy.descr.except" = "Udostępniaj moim kontaktom z wyjątkiem osób, które wybiorę";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.only" = "Udostępniaj tylko wybranym kontaktom";
 
+/* Header describing what these options are for */
+"feed.privacy.header" = "Kto zobaczy moje posty";
+
 /* Settings > Privacy > Posts: one of the possible setting values. */
-"feed.privacy.list.all" = "Moje kontakty telefoniczne";
+"feed.privacy.list.all" = "Moje kontakty";
 
 /* Settings > Privacy > Posts: one of the possible setting values. */
 "feed.privacy.list.except" = "Moje kontakty oprócz...";
 
+/* Header for the list when selecting contacts to not share with. */
+"feed.privacy.list.except.details" = "Wybierz, kto nie zobaczy tego posta";
+
+/* Title for the list when selecting contacts to not share with. */
+"feed.privacy.list.except.title" = "Ukryj posty przed...";
+
 /* Settings > Privacy > Posts: one of the possible setting values. */
 "feed.privacy.list.only" = "Udostępniaj tylko dla...";
 
+/* Header for the list when selecting contacts to share with. */
+"feed.privacy.list.only.details" = "Wybierz, kto zobaczy ten post";
+
 /* Possible Feed Privacy setting value. */
-"feed.privacy.value.my.contacts" = "Moje kontakty telefoniczne";
+"feed.privacy.value.my.contacts" = "Moje kontakty";
 
 /* Possible Feed Privacy setting value. Can be longer. */
 "feed.privacy.value.n.contacts.excluded" = "feed.privacy.value.n.contacts.excluded";
@@ -556,6 +658,9 @@
 /* Message text shown when you remove a group member */
 "group.event.removed.member.you" = "Użytkownik %1@ został przez Ciebie usunięty";
 
+/* Indicates how many members are in the group */
+"group.feed.n.members" = "group.feed.n.members";
+
 /* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their group feed, in their newly created group */
 "group.feed.welcome.post.body" = "Udostępnij ten link swoim przyjaciołom, a oni automatycznie dołączą do Twojej grupy.";
 
@@ -614,7 +719,7 @@
 "group.preview.join.error.title" = "Nie można dołączyć do grupy";
 
 /* Label for joining group action */
-"group.preview.join.group" = "DOŁĄCZ DO GRUPY";
+"group.preview.join.group" = "Dołącz do grupy";
 
 /* Text shown to tell user the group title is tappable */
 "group.title.tap.for.info" = "Naciśnij tutaj, aby uzyskać informacje o grupie";
@@ -637,6 +742,24 @@
 /* Text shown in the email body when sending logs from the help screen */
 "help.send.logs.email.body" = "Prosimy o pozostawienie opinii lub opisu problemu w powyższym miejscu. \n\nWersja %1$@ - %2$@\n%3$@";
 
+/* Text shown to users on failed audio capture alert during a call. */
+"home.calls.fail.audio.text" = "Spróbuj ponownie później.";
+
+/* Title of failed audio capture alert during a call. */
+"home.calls.fail.audio.title" = "Nie można nagrać audio podczas połączenia HalloApp.";
+
+/* Text shown to users on call failure. */
+"home.calls.fail.text" = "Upewnij się, że Twój telefon ma połączenie z Internetem, i spróbuj ponownie.";
+
+/* Title of failed call screen alert. */
+"home.calls.fail.title" = "Nie można nawiązać połączenia.";
+
+/* Text shown to users trying to open the call screen. */
+"home.calls.notice.text" = "W tej chwili nie masz aktywnego połączenia.";
+
+/* Title of call screen alert. */
+"home.calls.notice.title" = "Brak aktywnych połączeń";
+
 /* Title for exit button that closes the app */
 "home.update.notice.button.exit" = "Zamknij";
 
@@ -645,6 +768,12 @@
 
 /* Title of update notice shown to users who have old versions of the app */
 "home.update.notice.title" = "Ta wersja jest nieaktualna";
+
+/* Text shown to users on video call failure. */
+"home.video.calls.fail.text" = "Już wkrótce...";
+
+/* Title of failed video call screen alert. */
+"home.video.calls.fail.title" = "Połączenia wideo nie są na razie obsługiwane.";
 
 /* Title of action sheet that allows the user to choose between sms and whatsapp to invite contact */
 "invite.action.sheet.title" = "%@ – zaproś tę osobę za pośrednictwem...";
@@ -805,8 +934,14 @@
 /* Displayed in place of deleted feed posts. */
 "n.posts.deleted" = "Usuniętych wpisów: %@";
 
+/* Placeholder text shown in the middle of the Add New Group Members screen when user have no contacts (in ZeroZone) to add */
+"new.group.members.empty.placeholder" = "Tutaj pojawią się Twoje kontakty, które są na HalloApp";
+
 /* Alert text shown when max group size is reached when selecting/adding group members */
 "new.group.members.max.size.alert" = "Maksymalna wielkość grupy wynosi %d";
+
+/* Title for alert that pops up when user attempts to save an empty contact list */
+"no.contact.selected" = "Nie wybrano żadnego kontaktu";
 
 /* Text shown to indicate user is not in the group anymore */
 "not.in.group.banner.text" = "Nie jesteś już w tej grupie";
@@ -904,6 +1039,9 @@
 /* Message in media picker when selecting over limit. */
 "picker.media.n.limit" = "picker.media.n.limit";
 
+/* Title for the picker screen. */
+"post.controller.picker.title" = "Nowy post";
+
 /* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "Ten wpis został usunięty.";
 
@@ -912,6 +1050,15 @@
 
 /* Displayed in place of a deleted feed post. */
 "post.has.been.deleted.by.you" = "Twój wpis został przez Ciebie usunięty";
+
+/* Header when selecting all or some contacts to share with */
+"post.privacy.header.contacts" = "Kto zobaczy ten post";
+
+/* Header when selecting a group to share with */
+"post.privacy.header.groups" = "Udostępnij tylko grupie";
+
+/* Controller title for changing destination and privacy */
+"post.privacy.title" = "Udostępnij...";
 
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
 "privacy.list.blocked" = "Zablokowani";
@@ -925,11 +1072,17 @@
 /* A label for the button which leads to the page showing groups in common */
 "profile.groups.in.common" = "Grupy wspólne";
 
+/* This is a verb.  The text is clickable, under a contact name and starts a voice call with that contact. It should not be translated as a noun. */
+"profile.header.call.user" = "połącz";
+
 /* This is a verb.  The text is clickable, under a contact name and takes the user to the chat screen with that contact. It should not be translated as a noun. */
-"profile.header.message.user" = "Wyślij wiadomość";
+"profile.header.message.user" = "wiadomość";
 
 /* Text for unblocking user under profile header */
 "profile.header.unblock.user" = "Odblokuj";
+
+/* Item in Profile > Calls screen. */
+"profile.help.calls" = "Połączenia";
 
 /* Item in Profile > Help screen. */
 "profile.help.faq" = "Często zadawane pytania";
@@ -1054,6 +1207,21 @@
 /* Message to show when safety number is succesfully verified */
 "safety.number.verified" = "Pomyślnie zweryfikowano numer bezpieczeństwa dla użytkownika %@!";
 
+/* Message that pops up when user attempts to save an empty contact list */
+"select.at.least.one.contact" = "Wybierz co najmniej jeden kontakt.";
+
+/* body of the marketing alert sent to users */
+"server.marketing.body" = "Zaproś znajomych do korzystania z HalloApp!";
+
+/* body of the marketing alert to encourage more posting */
+"server.marketing.post.body" = "To, co teraz robisz, może być interesujące dla Twoich prawdziwych przyjaciół.";
+
+/* title of the marketing alert to encourage more posting */
+"server.marketing.post.title" = "Zastanawiasz się, co udostępnić?";
+
+/* title of the marketing alert sent to users */
+"server.marketing.title" = "Tu Hallo!";
+
 /* fallback text in notification for a new comment */
 "server.new.comment" = "Nowy komentarz";
 
@@ -1096,17 +1264,29 @@
 /* Action that will occur when users delete their account */
 "settings.account.delete.bullet3" = "Usuń historię swoich wiadomości w tym telefonie";
 
+/* Button to continue to the next step of deleting account after warning */
+"settings.account.delete.continue.title" = "Kontynuuj";
+
 /* Label telling the user that their account has been deleted */
 "settings.account.delete.deleted" = "Konto usunięte";
 
 /* Alert telling user that their account could not be deleted, and that it's likely due to their phone number */
 "settings.account.delete.error" = "Wystąpił błąd przy usuwaniu Twojego konta. Prosimy upewnić się, że Twój numer telefonu jest poprawny.";
 
+/* Text field label asking for feedback before deleting account */
+"settings.account.delete.feedback.prompt" = "Informacje zwrotne dla zespołu HalloApp? (Opcjonalnie)";
+
 /* Label above list of things that will happen if they delete their account */
 "settings.account.delete.header" = "Skutki usunięcia swojego konta:";
 
 /* Alert message telling the user that account deletion is irreversible */
 "settings.account.delete.irreversible.label" = "Działanie to jest nieodwracalne";
+
+/* Text field placeholder for collecting feedback before deleing account */
+"settings.account.delete.phone.number.placeholder" = "Informacje zwrotne";
+
+/* Text field label for account deletion phone number */
+"settings.account.delete.phone.number.prompt" = "Podaj numer telefonu, aby potwierdzić";
 
 /* String that's displayed when a spinner is not available to indicate that the view is waiting for a response from the server */
 "settings.account.delete.spinner.replacement" = "Oczekiwanie na odpowiedź serwera";
@@ -1177,6 +1357,9 @@
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Dołącz do mojej sieci prawdziwych relacji z bliskimi na HalloApp. Pobierz za darmo na halloapp.com/dl";
 
+/* Label for call bar (shows at top of screen during active call). Returns user to call screen when tapped. */
+"tap.return.call" = "stuknij, aby powrócić do połączenia";
+
 /* One of the items in context menu presented upon long press on web link. */
 "textlabel.context.menu.add.reading.list" = "Dodaj do listy do przeczytania";
 
@@ -1202,7 +1385,7 @@
 "thread.list.preview.already.user.default" = "%@ jest na HalloApp";
 
 /* Default preview text shown for a symmetric contact who just joined Halloapp */
-"thread.list.preview.new.user.default" = "%@ jest na HalloApp! 🎉";
+"thread.list.preview.new.user.default" = "%@ jest na HalloApp🎉";
 
 /* Last seen timestamp: full date in short format and time */
 "timestamp.last.seen.date.at.time" = "Ostatnio widziany(-a) %1$@ o %2$@";
@@ -1239,6 +1422,9 @@
 
 /* Title for the Comments screen. */
 "title.comments" = "Komentarze";
+
+/* Title for the picker screen. */
+"title.comments.picker" = "Nowy komentarz";
 
 /* Second tab in the main app interface. */
 "title.groups" = "Grupy";
@@ -1277,7 +1463,10 @@
 "unknown.contact" = "Nieznany kontakt";
 
 /* Text for action label that lets the user accept messages from unknown contacts */
-"unknown.contact.accept.to.message" = "Zaakceptuj wiadomość, aby móc odpowiedzieć";
+"unknown.contact.accept.to.message" = "Przyjmuj wiadomości";
+
+/* Informational label that's shown in the banner for an unknown contact when they message the user for the first time */
+"unknown.contact.not.in.contact.book" = "Tego nadawcy nie ma wśród Twoich kontaktów.";
 
 /* Button to confirm blocking user via profile page */
 "user.block" = "Zablokuj";
@@ -1299,6 +1488,9 @@
 
 /* Message asking if the user is sure they want to unblock this user */
 "user.unblock.message" = "Czy na pewno chcesz odblokować użytkownika %@ na HalloApp? Zawsze możesz to zmienić później.";
+
+/* Button to start voice call. Should be translated as verb. */
+"user.voice.call" = "Połącz";
 
 /* Reference to the user, second person pronoun */
 "user.you" = "ty";
