--- a/Notification Service Extension/cs.lproj/Localizable.strings
+++ b/Notification Service Extension/cs.lproj/Localizable.strings
@@ -4,8 +4,17 @@
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Zkontrolujte, zda máte připojení k internetu, a zkuste to znovu.";
 
+/* Company name */
+"app.name.halloapp" = "HalloApp";
+
+/* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
+"button.add" = "Přidat";
+
 /* Title for generic Cancel button. Mostly used in popups and as such. */
 "button.cancel" = "Zrušit";
+
+/* Title for generic capitalized CANCEL button. Mostly used in popups and as such. */
+"button.cancel.capitalized" = "ZRUŠIT";
 
 /* Title for generic Continue button. Mostly used to complete some modal flow. */
 "button.continue" = "Pokračovat";
@@ -21,6 +30,9 @@
 
 /* Title for button that will take user to iOS settings (e.g., to enable some permission we need). */
 "button.go.to.settings" = "Přejít do Nastavení";
+
+/* Title for generic Invite button. */
+"button.invite" = "Pozvat";
 
 /* Title for generic Learn More button. Used to provide user with additional context to actions requested. */
 "button.learn.more" = "Další informace";
@@ -49,14 +61,35 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Sdílet";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Zastavit";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Aktualizovat";
+
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Chcete-li povolit nahrávání zvuku, klepněte na možnost Nastavení a zapněte mikrofon.";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Nelze získat přístup k mikrofonu";
 
 /* Title for generic delete button. */
 "Delete" = "Odstranit";
 
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.all" = "Sdílet se všemi mými kontakty";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.except" = "Sdílet s mými kontakty kromě vybraných lidí";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.only" = "Sdílet pouze s vybranými kontakty";
+
 /* Text shown in notification when the user is added to a new group */
 "groups.add.notification" = "Byli jste přidáni do nové skupiny";
+
+/* Generic label for search, mostly used as placeholder text for searchbar */
+"label.search" = "Hledat";
 
 /* Generic 'learn more' link. Mostly used to present additional information about topic. */
 "link.learnMore" = "Zjistit více";
@@ -64,8 +97,14 @@
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "Aktualizujte svou aplikaci.";
 
+/* Displayed while waiting for link preview to load */
+"loading.preview" = "Načítání náhledu…";
+
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Já";
+
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Zahodit";
 
 /* Push notification for a new comment. Parameter is the text of the comment */
 "notification.commented.with.text" = "Komentoval(a): %@";
@@ -81,6 +120,12 @@
 
 /* New post notification text when post is multiple videos without caption. */
 "notification.n.videos" = "oznámení.n.videa";
+
+/* Title for the new comment notification. */
+"notification.new.comment" = "Nový komentář";
+
+/* Content for contact notification. */
+"notification.new.contact.content" = "%@ teď používá HalloApp";
 
 /* Content for friend notification. */
 "notification.new.friend.content" = "%@ je nyní na HalloApp";
@@ -99,6 +144,12 @@
 
 /* New post notification text when post is a voice note. */
 "notification.voicenote" = "🎤 Hlasová poznámka";
+
+/* String to auto-fill if a user tried to share to a friend. */
+"settings.share.text" = "Připojte se k mé síti skutečných vztahů v aplikaci HalloApp. Můžete si ji stáhnout zdarma na adrese halloapp.com/dl";
+
+/* Row in Settings screen */
+"title.privacy" = "Soukromí";
 
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Neznámý kontakt";
