--- a/Share Extension/fr.lproj/Localizable.strings
+++ b/Share Extension/fr.lproj/Localizable.strings
@@ -61,11 +61,29 @@
 /* Title for generic Share button. Mostly used to complete some modal flow. */
 "button.share" = "Partager";
 
+/* Title for generic Stop button. Currently used to stop an audio recording) */
+"button.stop" = "Arrêter";
+
 /* Title for generic Update button. Mostly used to complete some modal flow. */
 "button.update" = "Actualiser";
 
+/* Alert message when missing microphone access */
+"chat.mic.access.denied.message" = "Pour activer l'enregistrement audio, appuie sur « Paramètres », puis allume le microphone";
+
+/* Alert title when missing microphone access */
+"chat.mic.access.denied.title" = "Impossible d'accéder au microphone";
+
 /* Title for generic delete button. */
 "Delete" = "Supprimer";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.all" = "Partager avec tous mes contacts";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.except" = "Partager avec mes contacts, sauf les personnes que je sélectionne";
+
+/* Describes what 'All Contacts' feed privacy setting means. */
+"feed.privacy.descr.only" = "Partager seulement avec les contacts sélectionnés";
 
 /* Generic label for search, mostly used as placeholder text for searchbar */
 "label.search" = "Recherche";
@@ -82,8 +100,14 @@
 /* Displayed in place of own name (e.g., next to own comments) */
 "meCapitalized" = "Moi";
 
+/* Button title. Refers to discarding photo/video edits in media composer. */
+"media.button.discard" = "Abandonner";
+
 /* String to auto-fill if a user tried to share to a friend. */
 "settings.share.text" = "Rejoignez mon réseau de relations réelles sur HalloApp. Téléchargez-le gratuitement sur halloapp.com/dl.";
+
+/* Label above the list with whom you share */
+"share.composer.destinations.label" = "Partager avec";
 
 /* Placeholder for media caption. */
 "share.composer.placeholder" = "Écrire une description";
@@ -110,13 +134,16 @@
 "share.composer.uploading.fail.title" = "Échec du téléchargement";
 
 /* Contacts category label */
-"share.destination.contacts" = "Contacts";
+"share.destination.contacts" = "Contacts récents";
 
 /* Groups category label */
-"share.destination.groups" = "Groupes";
+"share.destination.groups" = "Tes groupes";
 
 /* Share on the home feed label */
 "share.destination.home" = "Accueil";
+
+/* Share on the home feed selection cell */
+"share.destination.new" = "Nouvelle publication";
 
 /* Destination screen title */
 "share.destination.title" = "HalloApp";
@@ -127,6 +154,15 @@
 /* Title of alert when user is not logged in */
 "share.notlogged.title" = "Tu n'es pas connecté";
 
+/* Row in Settings screen */
+"title.privacy" = "Confidentialité";
+
 /* Displayed in place of contact name if name is not known. */
 "unknown.contact" = "Contact inconnu";
+
+/* How many bytes from total have been uploaded */
+"uploading.bytes.progress" = "%1$@ sur %2$@";
+
+/* Message how many items are currently being upload */
+"uploading.n.items" = "téléchargement.n.éléments";
 
